# Marginalia

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release.yml  test.yml
app/: knip.config.ts  next.config.mjs  package.json  tsconfig.json  vitest.tauri.config.mts
app/src/: globals.d.ts  styled-jsx.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/app/: error.tsx  layout.tsx
app/src/components/: Dialog.tsx  Providers.tsx  Toast.tsx  WindowButtons.tsx
app/src/helpers/: openWith.ts  shortcuts.ts
app/src/hooks/: useFileSelector.ts  useGamepad.ts  useOpenWithBooks.ts  useScreenWakeLock.ts  useShortcuts.ts  useSwipeToDismiss.ts  useTranslation.ts
app/src/i18n/: i18n.ts
app/src/libs/: document.ts  storage.ts
app/src/pages/: _app.tsx
app/src/services/: appService.ts  backupService.ts  bookService.ts  chapterExtraction.ts  cloudService.ts  commandRegistry.ts  constants.ts  environment.ts  errors.ts  nativeAppService.ts  settingsService.ts  webAppService.ts
app/src/store/: apiKeyStore.ts  bookDataStore.ts  chatStore.ts  parallelViewStore.ts  readerStore.ts  settingsStore.ts  themeStore.ts  trafficLightStore.ts
app/src/styles/: fonts.ts  globals.css  textures.ts  themes.ts
app/src/types/: annotator.ts  book.ts  settings.ts  system.ts  view.ts
app/src/utils/: a11y.ts  access.ts  book.ts  bridge.ts  cfi.ts  lang.ts  misc.ts  nav.ts  note.ts  sel.ts  (+6 more)
(+49 files in other folders)
